// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Race renders an image at position 0 1`] = `
<div
  className="position0"
>
  <img
    alt="Octane"
    src="octane.png"
  />
</div>
`;

exports[`Race renders an image at position 1 1`] = `
<div
  className="position1"
>
  <img
    alt="Octane"
    src="octane.png"
  />
</div>
`;
